fix(youtube): adjust color variables for better readability

--- a/styles/dracula-for-youtube.css
+++ b/styles/dracula-for-youtube.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name             Dracula for Youtube
 @namespace        github.com/druxorey/dracula-for-stylus
-@version          1.1.3
+@version          1.1.4
 @description      Are you tired of the same boring colors on Youtube? Then try this modern color style based on the Dracula theme
 @author           Druxorey
 @license          GNU General Public License v3.0
@@ -57,19 +57,19 @@
 	}
 
 	:root:not([dark]) {
-		--color-background-5: #F3F4F6;
-		--color-background-4: #E8E8EE;
-		--color-background-3: #DCDDE5;
-		--color-background-2: #D0D2DC;
-		--color-background-1: #C4C7D4;
+		--color-background-4: #F4F4F6;
+		--color-background-3: #DDDDE3;
+		--color-background-2: #DDDDE3;
+		--color-background-5: #A5A7B6;
+		--color-background-1: #8F91A3;
 
 		--color-foreground-1: #44475A;
-		--color-foreground-2: #353747;
-		--color-foreground-3: #282A36;
+		--color-foreground-2: #7E808E;
+		--color-foreground-3: #B9BAC2;
 
-		--color-shadow-1: #DCDDE5;
-		--color-shadow-2: #C4C7D4;
-		--color-shadow-3: #B2B5C2;
+		--color-shadow-1: #DDDDE3;
+		--color-shadow-2: #A5A7B6;
+		--color-shadow-3: #8F91A3;
 
 		background: var(--color-background-4) !important;
 	}
@@ -77,17 +77,17 @@
 	:root[dark] {
 		--color-background-1: #525568;
 		--color-background-2: #44475A;
-		--color-background-3: #353747;
+		--color-background-3: #2F313F;
 		--color-background-4: #282A36;
-		--color-background-5: #21222C;
+		--color-background-5: #1E1F29;
 
 		--color-foreground-1: #F8F8F2;
-		--color-foreground-2: #D9DADF;
-		--color-foreground-3: #B9BBCB;
+		--color-foreground-2: #9e9fa6;
+		--color-foreground-3: #5a5d6d;
 
-		--color-shadow-1: #353747;
-		--color-shadow-2: #21222C;
-		--color-shadow-3: #1A1C24;
+		--color-shadow-1: #2F313F;
+		--color-shadow-2: #1E1F29;
+		--color-shadow-3: #1A1B23;
 
 		background: var(--color-background-4) !important;
 	}
@@ -119,6 +119,7 @@
 		--yt-spec-icon-active-other: var(--color-foreground-1);
 		--yt-spec-wordmark-text: var(--color-foreground-1);
 		--yt-spec-button-chip-background-hover: var(--color-accent-2);
+		--yt-frosted-glass-desktop: var(--color-background-4);
 	}
 
 	.ytSuggestionComponentRemoveLinkDark {
@@ -322,7 +323,7 @@
 	}
 	
 	div#content.style-scope.ytd-rich-item-renderer {
-		background: if(@video-box = 1, var(--color-background-3), transparent);
+		background: if(@video-box = 1, var(--color-background-2), transparent);
 		box-shadow: 0rem 0rem 1rem if(@video-box = 1, var(--color-shadow-2), transparent);
 		padding: 1rem;
 		border-radius: 10px
@@ -354,5 +355,9 @@
 	
 	div#description.item.style-scope.ytd-watch-metadata {
 		box-shadow: 0rem 0rem 1rem var(--color-shadow-2);
+	}
+	
+	div#dismissible.style-scope .ytd-rich-shelf-renderer {
+		display: none;
 	}
 }
